--- a/northwoods.html
+++ b/northwoods.html
@@ -6,14 +6,13 @@ if (isset($_GET['source'])) {
   }
 ?>
 <html>
-<title> assignment 12 </title>
 <body>
 
 <?php
 
 $dbhost = "twinpeaks";
-$dbuser = "cferri";
-$dbpass = "dec1889.cf";
+$dbuser = "UserName";
+$dbpass = "Password";
 $dbname = "northwoods";
 
 $database = new mysqli($dbhost, $dbuser, $dbpass, $dbname);
